--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
             <div class="section-title">기본 정보</div>
             <div class="content">
                 <p>이름: 신혜규</p>
-                <p>연락처: (연락처 입력)</p>
-                <p>이메일: (이메일 입력)</p>
+                <p>연락처: 10-3796-7512</p>
+                <p>이메일: tlsgprb1212@gmail.com</p>
             </div>
         </section>
 
@@ -99,7 +99,7 @@
             <div class="section-title">학력</div>
             <div class="content">
                 <ul class="list">
-                    <li>(학력 사항 입력)</li>
+                    <li>부천범박고등학교</li>)</li>
                     <!-- 학력 사항 추가 -->
                 </ul>
             </div>
